Monitoring updates for MAY-2017

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-2.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-2.component.html
@@ -40,8 +40,13 @@
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">AUM - invested</td>
-                                    <td>179.5 million USD</td>
+                                    <td>179 500 000 USD</td>
                                 </tr>
+                                <tr>
+                                    <td style="font-weight: bold">NAV</td>
+                                    <td>180 889 915 USD</td>
+                                </tr>
+
                                 <tr>
                                     <td style="font-weight: bold">AUM – uninvested</td>
                                     <td>60.5 million USD</td>
@@ -139,7 +144,7 @@
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">NAV</td>
-                                    <td>149 647 415 USD</td>
+                                    <td>150 439 370 USD</td>
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">Inception</td>
@@ -269,6 +274,14 @@
                             <table class="table table-hover table-responsive" style="font-size: smaller">
                                 <tr style="background-color: #307240; color: white;" >
                                     <td colspan="2">Fund details (as of June 1, 2017)</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold">AUM – invested</td>
+                                    <td>29 500 000 USD</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold">NAV</td>
+                                    <td>30 450 545 USD</td>
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">AUM – uninvested</td>
