--- a/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="row withpadding">
         <!--<div class="row withpadding">-->
             <!--<a [routerLink]="['/reporting/inputFileUpload', 0]" class="btn btn-primary pull-right" *ngIf="canEdit()">New report</a>-->
         <!--</div>-->
