--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="row withpadding">
-                <div  style="background-color:#307240; color:white; font-size: medium; font-weight: bold">Key fund statistics</div>
+                <div  style="background-color:#307240; color:white; font-size: medium; font-weight: bold">Key fund statistics (as of {{this.asOfDate}})</div>
                 <div class="row">
                     <div class="col-md-12">
                         <table class="table table-hover table-responsive" style="font-size: smaller">
