--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -114,8 +114,27 @@
                             </div>
                         </div>
                         <div [hidden]="!visible">
+                            <br>
                             <div class="row withpadding">
-                                <h4>Fund Details</h4>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h4>Fund Details</h4>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="col-md-4"><b>As of date</b></div>
+                                        <div class="col-md-6"><input type='text' class="form-control" id="asOfDateOpenFund" name="asOfDateOpenFund" [(ngModel)]="fund.asOfDate"/></div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <td class="col-md-4"><b>NIC status</b></td>
+                                        <td class="col-md-6">
+                                            <select id="nicStatus" class="form-control" name="nicStatus" [(ngModel)]="fund.nicStatus">
+                                                <option value="None" selected>--</option>
+                                                <option value="IDD">IDD</option>
+                                                <option value="ODD">ODD</option>
+                                            </select>
+                                        </td>
+                                    </div>
+                                </div>
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-1">Fund size</td>
@@ -315,44 +334,117 @@
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Number of investments</b></td>
-                                        <td class="col-md-2">{{fund.numberOfInvestments}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="numberOfInv" [(ngModel)]="fund.numberOfInvestments" pattern="[+]?[0-9]*\.?[0-9]+" #numOfInv="ngModel"/>
+                                            <div [hidden]="numOfInv.valid || numOfInv.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.numberOfInvestments}}</td>-->
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Invested amount</b></td>
-                                        <td class="col-md-2">{{fund.investedAmount}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="invested" [(ngModel)]="fund.investedAmount" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
+                                            <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.investedAmount}}</td>-->
                                     </tr>
 
                                     <tr>
                                         <td class="col-md-3"><b>Realized amount</b></td>
-                                        <td class="col-md-2">{{fund.realized}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="realized" [(ngModel)]="fund.realized" pattern="[+]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
+                                            <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.realized}}</td>-->
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-3"><b>Benchmark</b></td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="benchmark" [(ngModel)]="fund.benchmarkName"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-3"><b>As of date</b></td>
+                                        <td class="col-md-3">
+                                            <div class="input-group">
+                                                <input type='text' class="input-group-addon form-control" id="asOfDate" name="asOfDate" [(ngModel)]="fund.asOfDate"/>
+                                            </div>
+                                        </td>
                                     </tr>
                                 </table>
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Unrealized amount</b></td>
-                                        <td class="col-md-2">{{fund.unrealized}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="unrealized" [(ngModel)]="fund.unrealized" pattern="[+]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
+                                            <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.unrealized}}</td>-->
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>DPI</b></td>
-                                        <td class="col-md-2">{{fund.dpi}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="dpi" [(ngModel)]="fund.dpi" pattern="[+]?[0-9]*\.?[0-9]+" #dpi="ngModel"/>
+                                            <div [hidden]="dpi.valid || dpi.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.dpi}}</td>-->
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Gross TVPI</b></td>
-                                        <td class="col-md-2">{{fund.grossTvpi}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="grossTvpi" [(ngModel)]="fund.grossTvpi" pattern="[+]?[0-9]*\.?[0-9]+" #grossTvpi="ngModel"/>
+                                            <div [hidden]="grossTvpi.valid || grossTvpi.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.grossTvpi}}</td>-->
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-3"><b>Benchmark NET IRR</b></td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="benchmarkNetIrr" [(ngModel)]="fund.benchmarkNetIrr" pattern="[+/-]?[0-9]*\.?[0-9]+" #benchmarkNetIrr="ngModel"/>
+                                            <div [hidden]="benchmarkNetIrr.valid || benchmarkNetIrr.pristine" class="alert alert-danger">
+                                                Only number could be entered
+                                            </div>
+                                        </td>
                                     </tr>
                                 </table>
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Gross IRR</b></td>
-                                        <td class="col-md-2">{{fund.grossIrr}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="grossIrr" [(ngModel)]="fund.grossIrr" pattern="[+/-]?[0-9]*\.?[0-9]+" #grossIrr="ngModel"/>
+                                            <div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">
+                                                Only number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.grossIrr}}</td>-->
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Net TVPI</b></td>
-                                        <td class="col-md-2">{{fund.netTvpi}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="netTvpi" [(ngModel)]="fund.netTvpi" pattern="[+]?[0-9]*\.?[0-9]+" #netTvpi="ngModel"/>
+                                            <div [hidden]="netTvpi.valid || netTvpi.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.netTvpi}}</td>-->
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Net IRR</b></td>
-                                        <td class="col-md-2">{{fund.netIrr}}</td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="netIrr" [(ngModel)]="fund.netIrr" pattern="[+/-]?[0-9]*\.?[0-9]+" #netIrr="ngModel"/>
+                                            <div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">
+                                                Only number could be entered
+                                            </div>
+                                        </td>
+                                        <!--<td class="col-md-2">{{fund.netIrr}}</td>-->
+                                    </tr>
+                                    <tr>
+                                        <td class="col-md-3"><b>Benchmark NET TVPI</b></td>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="benchmarkNetTvpi" [(ngModel)]="fund.benchmarkNetTvpi" pattern="[+]?[0-9]*\.?[0-9]+" #benchmarkNetTvpi="ngModel"/>
+                                            <div [hidden]="benchmarkNetTvpi.valid || benchmarkNetTvpi.pristine" class="alert alert-danger">
+                                                Only positive number could be entered
+                                            </div>
+                                        </td>
                                     </tr>
                                 </table>
                             </div>
